<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="MAIN" Id="{150c95ec-0456-4d2a-9418-59da97b7d368}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
fbArbiterIO: FB_SubSysToArbiter_IO;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[PRG_KFE_RIX_VAC();
fbLogHandler();

fbArbiterIO(i_bVeto:=  PMPS_GVL.stCurrentBeamParameters.aVetoDevices[PMPS.K_Stopper.MR1K1_OUT] AND NOT PMPS_GVL.stCurrentBeamParameters.aVetoDevices[PMPS.K_Stopper.MR1K1_IN],
	Arbiter:= fbArbiter,
	fbFFHWO:= g_FastFaultOutput1);

g_FastFaultOutput1.bAutoReset := TRUE;
g_FastFaultOutput1.Execute(i_xVeto := PMPS_GVL.stCurrentBeamParameters.aVetoDevices[PMPS.K_Stopper.MR1K1_OUT] AND NOT PMPS_GVL.stCurrentBeamParameters.aVetoDevices[PMPS.K_Stopper.MR1K1_IN]);
 
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>